@@ -1,6 +1,7 @@
 # frozen_string_literal: true
 
 # the following are organized under the Asciidoctor::Prawn namespace
+require_relative 'prawn/document/column_box'
 require_relative 'prawn/font_metric_cache'
 require_relative 'prawn/font/afm'
 require_relative 'prawn/images'
